--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
                         <td>$320,800</td>
                     </tr>
                     <tr>
-                        <td>Garrett Winters</td>
-                        <td>Accountant</td>
-                        <td>Tokyo</td>
-                        <td>63</td>
-                        <td>2011-07-25</td>
-                        <td>$170,750</td>
+                        <td>กรกฤช สังข์ทอง</td>
+                        <td>6439010015</td>
+                        <td>ฟอร์ด</td>
+                        <td>061-273-47xx</td>
+                        <td>Korakrit Sungthong</td>
+                        <td>เล่นเกม</td>
                     </tr>
                     <tr>
                         <td>Ashton Cox</td>
